grammar.js
    source_file: ($) => $.root_expression,

    line_comment: (_) => token(prec(-1, seq("//", /[^\r\n]*/))),

    block_comment: (_) => token(prec(-1, seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    root_expression: ($) => choice(
      $.open_expression,
      $.closed_expression,
    ),

    open_expression: ($) => prec.right(seq(
      $.expression,
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    closed_expression: ($) => prec.right(seq(
      $.value,
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    _pipeline_map_shorthand: ($) => choice(
      prec(1, seq(
        "|>",
        field("expression", alias($.parenthesized_open_expression, $.open_expression)),
      )),
      seq(
        "|>",
        field("expression", alias($._map_shorthand_expression, $.open_expression)),
      ),
    ),

    binary_expression: ($) => prec.left(1, seq(
      field("left", choice($.binary_expression, $._shorthand_operand)),
      field("operator", $.binary_operator),
      field("right", $._shorthand_operand),
    )),

    binary_operator: (_) => choice(
      "->",
      "|AND", "|OR", "|XOR",
      "|NAND", "|NOR", "|NXOR",
    ),

    unary_expression: ($) => prec.right(2, seq(
      field("operator", $.unary_operator),
      field("operand", choice($.unary_expression, ordinaryExpression($), $._unary_value)),
    )),

    unary_operator: (_) => "!",

    // A brace-delimited operand cannot follow unary `!`: `!{` is reserved
    // for dictionary literals, and whitespace must not turn `! {` into one.
    _unary_value: ($) => choice(
      $.incoming_value,
      $.constant_reference,
      $.variable,
      $.type_literal,
      $.record_access,
      $.numeric_literal,
      $.boolean_literal,
      $.null_literal,
      $.quoted_literal,
      $.temporal_literal,
      $.tuple_literal,
      $.pair_literal,
      $.grouping_literal,
      $.dictionary_literal,
      $.interval_literal,
    ),

    _shorthand_operand: ($) => choice(
      $.guarded_expression,
      $.unary_expression,
      ordinaryExpression($),
      $.value,
    ),

    // Binding stages are only reachable after an authored pipe and a source.
    _pipeline_stage: ($) => choice($._pipeline_expression, $.input_binding_expression),

    parenthesized_expression: ($) => seq(
      "(",
      field("expression", $.root_expression),
      ")",
    ),

    // Preserve the open-expression shape expected by map shorthand while
    // retaining the parenthesized expression as its single operation.
    tuple_projection: ($) => choice(
      seq(
        field("root", alias(/\^+\$/, $.expression_root)),
        field("index", alias(token.immediate(prec(-1, /(?:0|[1-9][0-9]*)/)), $.tuple_index)),
      ),
      seq(
        field("direction", alias("$", $.from_start)),
        field("index", alias(token.immediate(prec(-1, /(?:0|[1-9][0-9]*)/)), $.tuple_index)),
      ),
      seq(
        "$",
        field("direction", alias(token.immediate("^"), $.from_end)),
        field("index", alias(token.immediate(prec(-1, /(?:0|[1-9][0-9]*)/)), $.tuple_index)),
      ),
      seq(
        "$",
        field("direction", alias(token.immediate("-"), $.from_end)),
        field("index", alias(token.immediate(prec(-1, /[1-9][0-9]*/)), $.tuple_index)),
      ),
    ),

    function_call: ($) => seq(
      field("name", alias($._function_name, $.function_name)),
      optional(seq(
        "(",
        optional(choice(
          $.argument_list,
          alias($._trailing_argument_list, $.argument_list),
        )),
        ")",
      )),
    ),

    _function_name: ($) => choice($._identifier, /[A-Za-z]+(?:-[A-Za-z]+)+/),

    argument_list: ($) => prec.left(seq(
      choice($.positional_argument, $.named_argument, $.spread_argument),
      repeat(seq(",", choice($.positional_argument, $.named_argument, $.spread_argument))),
    )),

    _trailing_argument_list: ($) => prec.right(seq(
      choice($.positional_argument, $.named_argument, $.spread_argument),
      repeat(seq(",", choice($.positional_argument, $.named_argument, $.spread_argument))),
      ",",
    )),

    positional_argument: ($) => $._argument_value,

    _argument_value: ($) => choice(
      $.binary_expression,
      $.guarded_expression,
      $.unary_expression,
      alias($._nested_closed_expression, $.closed_expression),
      $.value,
      $.tuple_projection,
      $.pair_component_access,
      alias($._nested_open_expression, $.open_expression),
      $.parameterized_expression,
      $.parenthesized_expression,
    ),

    // Parentheses delimit the nested expression, so a function call or
    // function pipeline can be passed directly as a higher-order argument.
    _array_closed_expression: ($) => prec.right(2, seq(
      $._compound_value,
      choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      ),
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    _positional_spread_operand: ($) => choice(
      alias($._array_closed_expression, $.closed_expression),
      $._compound_value,
      $.parenthesized_expression,
      $.guarded_expression,
      $.unary_expression,
      $.binary_expression,
    ),

    _compound_value: ($) => choice(
      $.incoming_value,
      $.constant_reference,
      $.variable,
      $.type_literal,
      $.record_access,
      $.numeric_literal,
      $.boolean_literal,
      $.null_literal,
      $.quoted_literal,
      $.temporal_literal,
      $.array_literal,
      $.tuple_literal,
      $.pair_literal,
      $.grouping_literal,
      $.dictionary_literal,
      $.record_literal,
      $.interval_literal,
    ),

    tuple_literal: ($) => seq(
      "T",
      "(",
      choice(
        seq(
          alias($.tuple_leading_spread_element, $.tuple_element),
          repeat(seq(",", $.tuple_element)),
        ),
        seq(
          $.tuple_element,
          ",",
          $.tuple_element,
          repeat(seq(",", $.tuple_element)),
        ),
      ),
      ")",
    ),

    tuple_element: ($) => choice(
      seq(
        field("spread", "..."),
        field("expression", optional($._positional_spread_operand)),
      ),
      field("expression", choice(
        alias($._array_closed_expression, $.closed_expression),
        $._compound_value,
      )),
    ),

    pair_literal: ($) => seq(
      "(",
      field("key", $.root_expression),
      "=>",
      field("value", $.root_expression),
      ")",
    ),

    dictionary_literal: ($) => seq(
      "!{",
      optional(seq(
        $.pair_literal,
        repeat(seq(",", $.pair_literal)),
      )),
      "}",
    ),

    numeric_literal: (_) => /-?(?:0|[1-9][0-9]*)(?:\.[0-9]+)?/,

    null_literal: (_) => "#null",

    double_quoted_literal: ($) => seq(
      '"',
      repeat(choice($.double_quoted_content, $.escape_sequence)),
      '"',
    ),

    double_quoted_content: (_) => token.immediate(/[^"\\\r\n]+/),

    backtick_quoted_literal: ($) => seq(
      "`",
      optional($.backtick_quoted_content),
      "`",
    ),

    backtick_quoted_content: (_) => token.immediate(/[^`\r\n]+/),
