test/corpus/boolean-shorthands.txt
==================
Unary shorthand
==================

!is-null

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (function_call
          (function_name))))))

==================
Unary shorthand with arguments
==================

!less-than(5)

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (function_call
          (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))))))

==================
Unary shorthand with generic operands
==================

!$0

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (tuple_projection
          (from_start)
          (tuple_index))))))

==================
Nested unary shorthand
==================

!!is-null

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (unary_expression
          (unary_operator)
          (function_call
            (function_name)))))))

==================
Unary shorthand as an argument
==================

foo(!less-than(5))

---

(source_file
  (root_expression
    (open_expression
      (function_call
        (function_name)
        (argument_list
          (positional_argument
            (unary_expression
              (unary_operator)
              (function_call
                (function_name)
                (argument_list
                  (positional_argument
                    (numeric_literal)))))))))))

==================
Unary shorthand whitespace
==================

 ! less-than(5)

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (function_call
          (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))))))

==================
Each binary shorthand
==================

a |AND b |OR c |XOR d

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (binary_expression
          (binary_expression
            (function_call
              (function_name))
            (binary_operator)
            (function_call
              (function_name)))
          (binary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Each complementary binary shorthand
==================

a |NAND b |NOR c |NXOR d

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (binary_expression
          (binary_expression
            (function_call
              (function_name))
            (binary_operator)
            (function_call
              (function_name)))
          (binary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Complementary shorthand chains with existing shorthand
==================

a |NAND b |AND c |NOR d |OR e |NXOR f |XOR g

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (binary_expression
          (binary_expression
            (binary_expression
              (binary_expression
                (binary_expression
                  (function_call
                    (function_name))
                  (binary_operator)
                  (function_call
                    (function_name)))
                (binary_operator)
                (function_call
                  (function_name)))
              (binary_operator)
              (function_call
                (function_name)))
            (binary_operator)
            (function_call
              (function_name)))
          (binary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Complementary shorthand whitespace variants
==================

a|NAND b |NOR c  |NXOR  d

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (binary_expression
          (binary_expression
            (function_call
              (function_name))
            (binary_operator)
            (function_call
              (function_name)))
          (binary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Complementary shorthand composes with unary grouping and pipeline
==================

!a |NAND (b |NOR !c) | some-function

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (unary_expression
          (unary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (parenthesized_expression
          (root_expression
            (open_expression
              (binary_expression
                (function_call
                  (function_name))
                (binary_operator)
                (unary_expression
                  (unary_operator)
                  (function_call
                    (function_name))))))))
      (function_call
        (function_name)))))

==================
Unary shorthand binds inside binary shorthand
==================

!foo |AND bar

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (unary_expression
          (unary_operator)
          (function_call
            (function_name)))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Binary shorthand followed by an ordinary pipeline
==================

foo |AND bar | some-function

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (function_call
          (function_name))
        (binary_operator)
        (function_call
          (function_name)))
      (function_call
        (function_name)))))

==================
Parenthesized binary shorthand controls grouping
==================

(a |OR b) |AND c

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (parenthesized_expression
          (root_expression
            (open_expression
              (binary_expression
                (function_call
                  (function_name))
                (binary_operator)
                (function_call
                  (function_name))))))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Parenthesized binary shorthand as right operand
==================

a |OR (b |AND c)

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (function_call
          (function_name))
        (binary_operator)
        (parenthesized_expression
          (root_expression
            (open_expression
              (binary_expression
                (function_call
                  (function_name))
                (binary_operator)
                (function_call
                  (function_name))))))))))

==================
Parenthesized shorthand under unary shorthand
==================

!(a |OR b)

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (parenthesized_expression
          (root_expression
            (open_expression
              (binary_expression
                (function_call
                  (function_name))
                (binary_operator)
                (function_call
                  (function_name))))))))))

==================
Nested parenthesized shorthand
==================

((a |OR b) |AND c)

---

(source_file
  (root_expression
    (open_expression
      (parenthesized_expression
        (root_expression
          (open_expression
            (binary_expression
              (parenthesized_expression
                (root_expression
                  (open_expression
                    (binary_expression
                      (function_call
                        (function_name))
                      (binary_operator)
                      (function_call
                        (function_name))))))
              (binary_operator)
              (function_call
                    (function_name)))))))))

==================
Unary shorthand requires an operand
==================

!

---

(source_file
  (root_expression
    (open_expression
      (unary_expression
        (unary_operator)
        (MISSING pair_component_access)))))

==================
Binary shorthand requires a right operand
==================

foo |AND

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (function_call
          (function_name))
        (binary_operator)
        (MISSING pair_component_access)))))

==================
Binary shorthand requires a left operand
==================

|AND foo

---

(source_file
  (root_expression
    (open_expression
      (MISSING pair_component_access)
      (function_call
        (function_name))))
  (ERROR))

==================
Malformed binary shorthand operator
==================

foo |BAD bar

---

(source_file (root_expression (open_expression (function_call (function_name)) (function_call (function_name)))) (ERROR))


==================
Parenthesized shorthand requires a closing parenthesis
==================

(foo |AND bar

---

(source_file
  (root_expression
    (open_expression
      (parenthesized_expression
        (root_expression
          (open_expression
            (binary_expression
              (function_call
                (function_name))
              (binary_operator)
              (function_call
                (function_name)))))
        (MISSING ")")))))

==================
Complementary binary shorthand requires a right operand
==================

foo |NAND

---

(source_file
  (root_expression
    (open_expression
      (binary_expression
        (function_call
          (function_name))
        (binary_operator)
        (MISSING pair_component_access)))))

==================
Complementary binary shorthand requires a left operand
==================

|NOR foo

---

(source_file
  (root_expression
    (open_expression
      (MISSING pair_component_access)
      (function_call
        (function_name))))
  (ERROR))

==================
Malformed complementary binary shorthand operator
==================

foo |XNOR bar

---

(source_file (root_expression (open_expression (function_call (function_name)) (function_call (function_name)))) (ERROR))


==================
Negated predicate in a closed pipeline
==================

123 | !equal-to(125)

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (unary_expression
        (unary_operator)
        (function_call
          (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))))))

==================
Negated predicate with whitespace in a closed pipeline
==================

123 | ! equal-to(125)

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (unary_expression
        (unary_operator)
        (function_call
          (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))))))

==================
Negated predicate composed with a boolean shorthand
==================

123 | !equal-to(125) |OR even

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (binary_expression
        (unary_expression
          (unary_operator)
          (function_call
            (function_name)
            (argument_list
              (positional_argument
                (numeric_literal)))))
        (binary_operator)
        (function_call
          (function_name))))))

==================
Negated predicate in a grouped pipeline
==================

123 | ( ! equal-to(125) )

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (parenthesized_expression
        (open_expression
          (unary_expression
            (unary_operator)
            (function_call
              (function_name)
              (argument_list
                (positional_argument
                  (numeric_literal))))))))))

==================
Negated predicates around grouped boolean composition
==================

123 | ( ! equal-to(125) |OR even ) |AND !null

---

(source_file
  (root_expression
    (closed_expression
      (numeric_literal)
      (binary_expression
        (parenthesized_expression
          (root_expression
            (open_expression
              (binary_expression
                (unary_expression
                  (unary_operator)
                  (function_call
                    (function_name)
                    (argument_list
                      (positional_argument
                        (numeric_literal)))))
                (binary_operator)
                (function_call
                  (function_name))))))
        (binary_operator)
        (unary_expression
          (unary_operator)
          (function_call
            (function_name)))))))
